--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,9 @@
   border: var(--primary) dashed 2px;
   border-radius: 50%;
   width: 75px;
-  height: 70px;
 }
 
 .cabecalho figure img {
-  display: block;
   margin: 8px 15px;
 }
 
@@ -107,7 +105,7 @@
 .main-botao {
   border: var(--primary) solid 2px;
   background-color: #00b98e;
-  width: 200px;
+  width: 30%;
   padding: 15px;
   text-align: center;
   border-radius: 5px;
@@ -166,10 +164,11 @@ section {
   border-radius: 1.5%;
   margin: 1em;
   padding: 1em;
-  width: 250px;
-  height: 200px;
+  width: 14%;
+  height: 8%;
   gap: 8px;
   box-shadow: 0 0 0 15px var(--light);
+  padding: 2%;
 }
 
 .card-subtitulo {
