--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -6,7 +6,7 @@
 
     .cabecalho {
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         width: 130%;
     }
 
@@ -21,8 +21,6 @@
 
     .cabecalho-menu {
         position: relative;
-        top: 20px;
-
     }
 
     .cabecalho-menu ul li {
@@ -30,12 +28,10 @@
     }
 
     .main {
+        display: flex;
         width: 130%;
         flex-direction: column;
-    }
-
-    .main-imagem {
-        width: 150%;
+        text-align: center;
     }
 
     .main p {
@@ -43,15 +39,15 @@
     }
 
     .main h2 {
-        font-size: 2.5rem;
+        font-size: 4.5rem;
     }
 
-    .main img {
-        width: 130%;
+    .main figure img {
+        width: 100%;
     }
 
     .main-titulo h2 span {
-        font-size: 2rem;
+        font-size: 4.5rem;
     }
 
     .main-botao {
